[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bkh_pytorch_utils"
authors = [{name = "Bardia Khosravi", email = "bardiakhosravi95@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "matplotlib>=3.1.2",
    "pandas>=0.25.0",
    "numpy>=1.20.0",
    "torch>=2.1",
    "tabulate>=0.8.9",
    "tqdm>4.60.0",
    "monai>=1.5.0",
    "lightning>=2.5.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "scikit-image>=0.18.0",
    "overrides>=6.1.0",
    "timm>=1.0.0",
]

[project.urls]
Home = "https://github.com/BardiaKh/PytorchUtils"
Source = "https://github.com/BardiaKh/PytorchUtils"

